project/phase2/test/test_2_r14.out
Error type 14 at Line 11: accessing an undefined structure member
Error type 5 at Line 11: unmatching types appear at both sides of the assignment operator
